<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.add_recipe.AddRecipeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/recipe_image_view"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/title"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/image_placeholder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipe_creator_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/created_by"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/recipe_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title_text_view" />

    <TextView
        android:id="@+id/recipe_ingredients_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recipe_creator_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recipe_creator_text_view" />

    <TextView
        android:id="@+id/recipe_ingredients_content_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ingredients_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/recipe_ingredients_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_text_view" />

    <TextView
        android:id="@+id/recipe_instructions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recipe_ingredients_content_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_content_text_view" />

    <TextView
        android:id="@+id/recipe_instructions_content_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/instructions_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/recipe_instructions_text_view"
        app:layout_constraintTop_toBottomOf="@+id/recipe_instructions_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>